K8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80

          - path: /static
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80

          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
